# PAROL6-python-API

./: .pre-commit-config.yaml  CLAUDE.md  README.md  benchmark_results.md  install-minimal.sh  precision.py  pyproject.toml  test_fork_safety.py
.github/workflows/: tests.yml
examples/: null_space_benchmark.py  precision.py
parol6/: PAROL6_ROBOT.py  __init__.py  ack_policy.py  config.py  tools.py
parol6/cli/: server.py
parol6/client/: async_client.py  manager.py  status_subscriber.py  sync_client.py
parol6/commands/: __init__.py  base.py  basic_commands.py  cartesian_commands.py  gcode_commands.py  gripper_commands.py  joint_commands.py  query_commands.py  smooth_commands.py  system_commands.py  utility_commands.py
parol6/gcode/: commands.py  interpreter.py
parol6/motion/: __init__.py  geometry.py  streaming_executors.py  trajectory.py
parol6/protocol/: types.py  wire.py
parol6/server/: __init__.py  cli.py  command_executor.py  command_registry.py  controller.py  ik_worker.py  ik_worker_client.py  loop_timer.py  state.py  status_broadcast.py  status_cache.py  transport_manager.py
parol6/server/ipc/: __init__.py  shared_memory_types.py
parol6/server/transports/: __init__.py  mock_serial_adapter.py  mock_serial_process.py  mock_serial_transport.py  serial_transport.py  transport_factory.py  udp_transport.py
parol6/urdf_model/meshes/: L6_simplified.stl  pneumatic_gripper_assembly_simplified.stl
parol6/utils/: frames.py  ik.py  se3_numba.py  se3_utils.py  warmup.py
scripts/: simplify_meshes.py
tests/: conftest.py
tests/hardware/: test_manual_moves.py
tests/integration/: conftest.py  test_ack_and_nonblocking.py  test_jog_speed_extremes.py  test_movecart_accuracy.py  test_movecart_idempotence.py  test_multicast_reception.py  test_profile_commands.py  test_smooth_commands_e2e.py  test_status_broadcast_autofailover.py  test_streaming_cartesian_accuracy.py  test_udp_smoke.py
tests/unit/: test_async_client_lifecycle.py  test_controller_system_commands.py  test_conversions.py  test_messages.py  test_motion.py  test_movecart_command.py  test_query_commands_actions.py  test_reset_command.py  test_ruckig_bypass.py  test_se3_utils.py  test_status_cache_enablement_ascii.py  test_wire.py
